Correct line spacing withing paragraphs

--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,9 @@ footer {
   width: 880px;
   margin: auto 0;
 }
+p {
+  line-height: 29px;
+}
 h2 {
   padding-top: 2%;
   padding-bottom: 2%;
@@ -219,7 +222,7 @@ h2 {
 .button {
   background-color: lightblue;
   color: white;
-  margin-top: 10px;
+  margin-top: -50px;
   margin-left: 20%;
   border-radius: 5px;
   height: 40px;
