--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,10 @@
      
   }
 
+  p{
+      line-height: 29px;
+  }
+
   
 h2{
     padding-top:2%;
@@ -54,7 +58,7 @@ h2{
 .button{
     background-color: @btncolor;
     color: white;
-    margin-top: 10px;
+    margin-top: -50px;
     margin-left:20%;
     border-radius: 5px;
     height:40px;
